--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "^14.2.33",
+    "marked": "^12.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
